--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,7 +20,7 @@ jobs:
         sudo apt install libfuse2
         sudo apt install autotools-dev autoconf automake build-essential meson ninja-build cmake
         wget https://raw.githubusercontent.com/Samueru-sama/AppMan-AppImage/main/appman-appimage.sh
-        chmod a+x ./htop-appimage.sh
+        chmod a+x ./appman-appimage.sh
         ./appman-appimage.sh
         mkdir dist
         mv *AppImage dist/
